# flashbox

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
assets/: theme.css
docs/: index.md
docs/assets/: hero-particles-v2.js  hero-particles.js  hero.css
docs/explanation/: architecture.md
docs/how-to/: setup-persistent-volumes.md
docs/overrides/: main.html
docs/reference/: cli-commands.md
docs/tutorials/: getting-started.md
explanation/architecture/: index.html
how-to/setup-persistent-volumes/: index.html
overrides/: main.html
reference/cli-commands/: index.html
search/: search_index.json
src/flashbox/: __init__.py  cli.py  docker_manager.py  monitor.py
tests/: test_cli.py  test_docker_manager.py  test_monitor.py
tutorials/getting-started/: index.html
