[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flashbox"
version = "0.1.0"
description = "A dynamic, repository-aware persistent Docker sandbox CLI for AI Agents."
readme = "README.md"
authors = [
    { name = "Mark Eyser", email = "markeyser@github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]
keywords = ["ai", "agents", "docker", "sandbox", "mcp", "cli", "telemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Terminals",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/markeyser/flashbox"

[project.scripts]
sandbox = "flashbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
